--- a/beagle-fair-config/src/main/resources/messages.properties
+++ b/beagle-fair-config/src/main/resources/messages.properties
@@ -4,6 +4,7 @@
 1002={0} field is required.
 1003=Transaction id and reference id are empty.
 1004={0} exists.
+1006=Username is not found.
 1005= username must be letters, numbers, period, underline and start with alphabet.
 1200={0} field have at lease one digit, one lowercase character, one uppercase character.
 1201={0} field must be international format phone number, begins with '+'.
