--- a/beagle-fair-config/src/main/resources/messages.properties
+++ b/beagle-fair-config/src/main/resources/messages.properties
@@ -1,14 +1,19 @@
 500=Internal Error.
-1000={0} must be between {2} and {1} characters.
-1001=Gender is invalid.
-1002={0} field is required.
-1003=Transaction id and reference id are empty.
-1004={0} exists.
-1006=Username is not found.
-1005= username must be letters, numbers, period, underline and start with alphabet.
-1200={0} field have at lease one digit, one lowercase character, one uppercase character.
-1201={0} field must be international format phone number, begins with '+'.
-1202={0} field only contains alphabet characters and spaces.
-1250=Request Object is not readable.
-1501={0} is invalid fomart dd/MM/yyyy.
-1502={0} must be over date current.
+1000=Request Object is not readable.
+
+1030={0} field is required.
+1031={0} exists.
+1032={0} must be between {2} and {1} characters.
+#birthday
+1033={0} is invalid fomart dd/MM/yyyy.
+1034={0} mustn't be over date current.
+#password
+1035={0} field have at lease one digit, one lowercase character, one uppercase character.
+#phoneNumber
+1036={0} field must be international format phone number, begins with '+'.
+1037={0} field only contains alphabet characters and spaces.
+1038= username must be letters, numbers, period, underline and start with alphabet.
+1039=User is not found.
+1040=Gender is invalid.
+
+
