create sessionUtil get currentUserId, add validate for PurchaseRequest, update PurchaseController

--- a/beagle-fair-config/src/main/resources/messages.properties
+++ b/beagle-fair-config/src/main/resources/messages.properties
@@ -16,4 +16,9 @@
 1039=User is not found.
 1040=Gender is invalid.
 
+1041={0} must have at least is {1}.
+1042={0} must have maximum is {1}.
+1043={0} must be a digital number.
+1044={0} must be alphanumeric characters, the length of {0} must be 12 characters.
+
 
