--- a/beagle-fair-config/src/main/resources/messages.properties
+++ b/beagle-fair-config/src/main/resources/messages.properties
@@ -15,5 +15,7 @@
 1038= username must be letters, numbers, period, underline and start with alphabet.
 1039=User is not found.
 1040=Gender is invalid.
+1050={0} must be greated than 0.
+1051={0} must be integer.
 
 
