check balance when user not have enough money to purchase, add UserNotHaveEnoughToPurchaseException

--- a/beagle-fair-config/src/main/resources/messages.properties
+++ b/beagle-fair-config/src/main/resources/messages.properties
@@ -16,6 +16,7 @@
 1039=User is not found.
 1040=Gender is invalid.
 1044={0} must be alphanumeric characters, the length of {0} must be 12 characters.
+1045=The Balance is not enough to purchase.
 1050={0} must be greated than 0.
 1051={0} must be integer.
 
